[gd_scene load_steps=109 format=2]

[ext_resource path="res://Sprites/Player/player_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SpireAnim.gd" type="Script" id=4]
[ext_resource path="res://Sprites/NewPlayer.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Ledge/Ledge.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Ledge/LedgeClimb.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/player_combat_sheet.png" type="Texture" id=8]
[ext_resource path="res://Scenes/PlayerCam.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 92 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 1 )
region = Rect2( 0, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 1 )
region = Rect2( 96, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 1 )
region = Rect2( 192, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 1 )
region = Rect2( 288, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 1 )
region = Rect2( 384, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 1 )
region = Rect2( 480, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 0, 252, 96, 84 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 96, 252, 96, 84 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 192, 252, 96, 84 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 288, 252, 96, 84 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 384, 252, 96, 84 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 480, 252, 96, 84 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 576, 252, 96, 84 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 672, 252, 96, 84 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 0, 840, 96, 84 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 96, 840, 96, 84 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 192, 840, 96, 84 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 288, 840, 96, 84 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 384, 840, 96, 84 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 480, 840, 96, 84 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 576, 840, 96, 84 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 672, 840, 96, 84 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 0, 84, 96, 84 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 96, 84, 96, 84 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 1 )
region = Rect2( 192, 84, 96, 84 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 288, 84, 96, 84 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 1 )
region = Rect2( 384, 84, 96, 84 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 480, 84, 96, 84 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 576, 84, 96, 84 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 1 )
region = Rect2( 0, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 1 )
region = Rect2( 96, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 1 )
region = Rect2( 192, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 1 )
region = Rect2( 288, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 1 )
region = Rect2( 384, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 1 )
region = Rect2( 480, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 1 )
region = Rect2( 576, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 1 )
region = Rect2( 672, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 1 )
region = Rect2( 768, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 1 )
region = Rect2( 864, 924, 96, 84 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 1 )
region = Rect2( 576, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 1 )
region = Rect2( 672, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 1 )
region = Rect2( 768, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 1 )
region = Rect2( 864, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 1 )
region = Rect2( 960, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 1 )
region = Rect2( 1056, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 1 )
region = Rect2( 0, 1008, 96, 84 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 1 )
region = Rect2( 96, 1008, 96, 84 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 1 )
region = Rect2( 192, 1008, 96, 84 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 1 )
region = Rect2( 288, 1008, 96, 84 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 1 )
region = Rect2( 0, 1428, 96, 84 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 1 )
region = Rect2( 96, 1428, 96, 84 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 1 )
region = Rect2( 192, 1428, 96, 84 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 1 )
region = Rect2( 288, 1428, 96, 84 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 1 )
region = Rect2( 384, 1428, 96, 84 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 0, 504, 96, 84 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 0, 1344, 96, 84 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 96, 1344, 96, 84 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 192, 1344, 96, 84 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 288, 1344, 96, 84 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 384, 1344, 96, 84 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 480, 1344, 96, 84 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 8 )
region = Rect2( 672, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 8 )
region = Rect2( 864, 0, 96, 84 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 1 )
region = Rect2( 1152, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 1 )
region = Rect2( 1248, 672, 96, 84 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 1 )
region = Rect2( 0, 588, 96, 84 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 1 )
region = Rect2( 96, 588, 96, 84 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 96, 256 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 96, 256 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 96, 256 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 96, 256 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 96, 256 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 96, 256 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 7 )
region = Rect2( 576, 0, 96, 256 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 7 )
region = Rect2( 672, 0, 96, 256 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 1 )
region = Rect2( 0, 588, 96, 84 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 1 )
region = Rect2( 96, 588, 96, 84 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 96, 84 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 1 )
region = Rect2( 0, 1092, 96, 84 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 1 )
region = Rect2( 96, 1092, 96, 84 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 1 )
region = Rect2( 192, 1092, 96, 84 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 1 )
region = Rect2( 288, 1092, 96, 84 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 1 )
region = Rect2( 0, 756, 96, 84 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 1 )
region = Rect2( 96, 756, 96, 84 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 1 )
region = Rect2( 192, 756, 96, 84 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 1 )
region = Rect2( 288, 756, 96, 84 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 1 )
region = Rect2( 384, 756, 96, 84 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 1 )
region = Rect2( 480, 756, 96, 84 )

[sub_resource type="SpriteFrames" id=144]
animations = [ {
"frames": [ SubResource( 145 ) ],
"loop": true,
"name": "Ledge",
"speed": 5.0
}, {
"frames": [ SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ) ],
"loop": false,
"name": "Jump_Intro_Spin",
"speed": 60.0
}, {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "Crawl",
"speed": 10.0
}, {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": true,
"name": "Roll",
"speed": 20.0
}, {
"frames": [ SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ) ],
"loop": true,
"name": "Jump_Spinning",
"speed": 20.0
}, {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
}, {
"frames": [ SubResource( 69 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": true,
"name": "Wallslide",
"speed": 5.0
}, {
"frames": [ SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 160 ), SubResource( 160 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ) ],
"loop": false,
"name": "Groundslam",
"speed": 10.0
}, {
"frames": [ SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ) ],
"loop": false,
"name": "Jump_Outro_Spin",
"speed": 20.0
}, {
"frames": [ SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ) ],
"loop": false,
"name": "LedgeClimb",
"speed": 10.0
}, {
"frames": [ SubResource( 164 ), SubResource( 165 ) ],
"loop": false,
"name": "Land",
"speed": 10.0
}, {
"frames": [ SubResource( 129 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ) ],
"loop": true,
"name": "Slide",
"speed": 10.0
}, {
"frames": [ SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ) ],
"loop": true,
"name": "Crouch",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 32
script = ExtResource( 2 )
jump_buffer = 0.15
coyate_buffer = 0.25
jump_height = 80.0
jump_time_to_fall = 0.25
slide_distance = 48.0
slide_duration = 0.25

[node name="Standing" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Crouch" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 2 )
disabled = true

[node name="Ceiling" type="RayCast2D" parent="Crouch"]
visible = false
position = Vector2( 0, -23 )
enabled = true
cast_to = Vector2( 0, -3 )

[node name="Ceiling2" type="RayCast2D" parent="Crouch"]
visible = false
position = Vector2( 0, -7 )
enabled = true
cast_to = Vector2( 0, -3 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Duration" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Frequency" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Facing" type="Node2D" parent="."]

[node name="Head" type="RayCast2D" parent="Facing"]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="Ledge" type="RayCast2D" parent="Facing"]
visible = false
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="Torso" type="RayCast2D" parent="Facing"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="OtherWall" type="RayCast2D" parent="Facing"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( -33, 0 )

[node name="Legs" type="RayCast2D" parent="Facing"]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 8, 0 )

[node name="Feet" type="RayCast2D" parent="Facing"]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2
collide_with_areas = true

[node name="BelowFeet" type="RayCast2D" parent="Facing"]
position = Vector2( 0, 24 )
enabled = true
cast_to = Vector2( 8, 0 )

[node name="CloseGround" type="RayCast2D" parent="Facing"]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 33 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Facing"]
self_modulate = Color( 0.313726, 0.8, 0.160784, 1 )
position = Vector2( 0, -26 )
frames = SubResource( 144 )
animation = "Idle"
frame = 3
playing = true
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Facing"]
visible = false
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Facing"]
visible = false
position = Vector2( 0, -26 )
texture = ExtResource( 1 )
hframes = 14
vframes = 19

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="Timers" type="Node" parent="."]

[node name="AutoClamberCD" type="Timer" parent="Timers"]
one_shot = true

[node name="Slide" type="Timer" parent="Timers"]
one_shot = true

[node name="SlideCD" type="Timer" parent="Timers"]
one_shot = true

[node name="Ledge" type="Timer" parent="Timers"]
one_shot = true

[node name="Powerslide" type="Timer" parent="Timers"]
one_shot = true

[node name="JumpBuffer" type="Timer" parent="Timers"]
one_shot = true

[node name="JumpCoyate" type="Timer" parent="Timers"]
one_shot = true

[connection signal="timeout" from="Camera2D/Duration" to="Camera2D" method="_on_Duration_timeout"]
[connection signal="timeout" from="Camera2D/Frequency" to="Camera2D" method="_on_Frequency_timeout"]
